[package]
name = "tiny-tsdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
nom = "7"
rocksdb = { version = "0.18.0", default-features = false, features = ["zstd"] }
rustyline = "9"